# rosota-copilot

./: .gitignore  BUILD_CROSS_PLATFORM.md  BUILD_FIXES.md  BUILD_GUIDE.md  MIDTERM_REVIEW.md  PROJECT_REVIEW.md  QUICKSTART_DESIGN.md  QUICK_BUILD.md  README.md  README_APP.md  README_BUILD.md  Rosota Copilot.spec  build_app.py  build_app_linux.sh  build_app_macos.sh  build_app_simple.sh  build_app_windows.bat  build_app_windows.ps1  build_simple.sh  check_motor_limits.py  requirements.txt  setup.py
rosotaLerobot/: .gitignore  INSTALL.md  MANIFEST.in  README.md  SETUP.md  pyproject.toml
rosotaLerobot/src/rosota_lerobot/: __init__.py  main.py
rosotaLerobot/src/rosota_lerobot/calibration/: __init__.py  calibrator.py
rosotaLerobot/src/rosota_lerobot/control/: __init__.py  keyboard.py
rosotaLerobot/src/rosota_lerobot/robot/: __init__.py  connection.py  so100.py
rosotaLerobot/src/rosota_lerobot/robot/motors/: __init__.py  feetech.py  motor_utils.py
rosotaLerobot/src/rosota_lerobot/utils/: config.py
rosota_copilot/: .gitignore  ARCHITECTURE.md  BUILD_CROSS_PLATFORM.md  FEATURES.md  INSTALLATION.md  MOTOR_CONFIGURATION_ANALYSIS.md  README.md  README_BUILD.md  Rosota Copilot.spec  __init__.py  __main__.py  build_app_linux.sh  build_app_macos.sh  build_app_windows.bat  build_app_windows.ps1  config.py  server.py
rosota_copilot/api/: routes.py
rosota_copilot/robot/: calibration.py  keyboard_control.py  motor_setup.py  recorder.py  so_arm.py  so_arm_new.py  so_arm_old.py  so_arm_v2.py  usb_scanner.py
rosota_copilot/templates/: index.html
(+4 files in other folders)
